Fixed padding and logo label wrapping

--- a/style.css
+++ b/style.css
@@ -216,12 +216,26 @@ ul{
 
     .section12__logo-and-links{
         flex-wrap: wrap;
-        padding-top: 40px;
+        padding: 40px 24px 0px 24px;
         margin-top: 50px;
         justify-content: center;
         gap: 40px;
     }
     /* section-12 end */
+}
+
+@media screen and (max-width:1104px) {
+    
+    .section12__logo-wrapper{
+        display: flex;
+        gap: 12px;
+        margin-bottom: 8px;
+    }
+
+    .section12__logo{
+        width: 64px;
+        height: 64px;
+    }
 }
 
 @media screen and (max-width: 576px) {
@@ -274,6 +288,10 @@ ul{
 
     .section12__copyright{
         margin-top: 56px;
+    }
+
+    .section12__button{
+        top: 6px;
     }
     /* section-12 end */
 }
